--- a/szoveg2.html
+++ b/szoveg2.html
@@ -108,11 +108,13 @@
   </div>
 
   <script>
-    const lines = [
-      "Az osztáyközösségünkre egy kis csiszolódás ráfér még...",
-      "Így Prátert szemeltük ki célul",
-      "Egy feljethetelen bécsi napra mennénk el, tele élményekkel",
-    ];
+   const lines = [
+  "Az osztályközösségünkre még ráfér egy kis összecsiszolódás...",
+  "Ezért egy különleges helyre indulnánk: a bécsi Práterbe!",
+  "A legjobb, hogy nincs belépődíj, így mindenki részt vehet rajta!",
+  "Egy nap, ami tényleg összehozná az osztályt.",
+  "Na de térjünk is át a matekra..."
+];
 
     const display = document.getElementById('display');
     const intro = document.getElementById('intro');
