--- a/afterdonut.html
+++ b/afterdonut.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Szöveg animáció – élethű függöny</title>
+  <title>Szöveg animáció – lebegő függöny</title>
   <style>
     :root {
       --bg: #000;
@@ -15,11 +15,11 @@
     html, body {
       height: 100%;
       margin: 0;
-      font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
       background: var(--bg);
       color: var(--text);
       overflow: hidden;
       position: relative;
+      font-family: Inter, system-ui, sans-serif;
     }
 
     /* Háttér */
@@ -43,6 +43,7 @@
       100% { transform: translateX(-50%) scale(1.08); }
     }
 
+    /* Csillag háttér */
     .stars {
       position: fixed;
       top: 0;
@@ -61,7 +62,6 @@
     }
 
     .display-wrap {
-      pointer-events: none;
       position: absolute;
       inset: 0;
       display: flex;
@@ -70,6 +70,7 @@
       background: rgba(0,0,0,0.45);
       z-index: 10;
     }
+
     .line {
       font-size: var(--font-sz);
       font-weight: 700;
@@ -79,7 +80,7 @@
       text-shadow: 0 2px 8px rgba(0,0,0,0.7);
     }
 
-    .word { display: inline-flex; white-space: nowrap; margin-right: 0.35em; }
+    .word { display: inline-flex; margin-right: 0.35em; white-space: nowrap; }
     .char {
       opacity: 0;
       display: inline-block;
@@ -112,11 +113,11 @@
       height: 100vh;
       background-image: var(--curtain-img);
       background-size: 200% 100%;
+      background-repeat: no-repeat;
       z-index: 20000;
       opacity: 0;
-      animation-fill-mode: forwards;
       box-shadow: inset 0 0 80px rgba(0,0,0,0.6);
-      background-repeat: no-repeat;
+      animation-fill-mode: forwards;
     }
 
     .curtain.left {
@@ -131,17 +132,50 @@
       transform: translateX(100%);
     }
 
+    /* Behúzás + lebegés közben */
     @keyframes curtainCloseLeft {
-      0% { transform: translateX(-100%); opacity: 1; }
-      100% { transform: translateX(0); opacity: 1; }
+      0% {
+        transform: translateX(-100%) skewX(0deg);
+        opacity: 1;
+        filter: brightness(1);
+      }
+      30% {
+        transform: translateX(-60%) skewX(1deg);
+        filter: brightness(1.05);
+      }
+      60% {
+        transform: translateX(-25%) skewX(-1.5deg);
+        filter: brightness(0.95);
+      }
+      100% {
+        transform: translateX(0%) skewX(0deg);
+        opacity: 1;
+        filter: brightness(1);
+      }
     }
 
     @keyframes curtainCloseRight {
-      0% { transform: translateX(100%); opacity: 1; }
-      100% { transform: translateX(0); opacity: 1; }
+      0% {
+        transform: translateX(100%) skewX(0deg);
+        opacity: 1;
+        filter: brightness(1);
+      }
+      30% {
+        transform: translateX(60%) skewX(-1deg);
+        filter: brightness(1.05);
+      }
+      60% {
+        transform: translateX(25%) skewX(1.5deg);
+        filter: brightness(0.95);
+      }
+      100% {
+        transform: translateX(0%) skewX(0deg);
+        opacity: 1;
+        filter: brightness(1);
+      }
     }
 
-    /* 🌬 Lebegő hullámzás, élethű textilmozgás */
+    /* Lebegés miután bezárult */
     @keyframes curtainFloat {
       0% { transform: translateX(0) scaleX(1); filter: brightness(1) contrast(1); }
       50% { transform: translateX(0.6%) scaleX(1.02); filter: brightness(1.05) contrast(1.05); }
@@ -251,7 +285,6 @@
         setTimeout(()=>img.remove(), 8500);
       }
 
-      // 2 mp várakozás után záródik a függöny
       setTimeout(() => {
         closeCurtains();
       }, 8000);
@@ -260,8 +293,8 @@
     function closeCurtains(){
       leftCurtain.style.opacity = "1";
       rightCurtain.style.opacity = "1";
-      leftCurtain.style.animation = "curtainCloseLeft 3s ease forwards, curtainFloat 5s ease-in-out infinite 3s";
-      rightCurtain.style.animation = "curtainCloseRight 3s ease forwards, curtainFloat 5s ease-in-out infinite 3s";
+      leftCurtain.style.animation = "curtainCloseLeft 3.5s ease-in-out forwards, curtainFloat 5s ease-in-out infinite 3.5s";
+      rightCurtain.style.animation = "curtainCloseRight 3.5s ease-in-out forwards, curtainFloat 5s ease-in-out infinite 3.5s";
     }
 
     function startIntro(){
