--- a/index.html
+++ b/index.html
@@ -13,6 +13,32 @@
   z-index: 0;
   background: transparent;
 }
+/* Aurora háttér */
+.aurora {
+  position: absolute;
+  inset: 0;
+  background: radial-gradient(circle at 30% 30%, #60a5fa55, transparent 60%),
+              radial-gradient(circle at 70% 70%, #a855f755, transparent 60%),
+              radial-gradient(circle at 50% 90%, #22d3ee55, transparent 60%);
+  filter: blur(120px);
+  animation: auroraMove 18s ease-in-out infinite alternate;
+  z-index: 0;
+}
+
+@keyframes auroraMove {
+  0% {
+    transform: translate(0, 0) scale(1);
+    opacity: 0.9;
+  }
+  50% {
+    transform: translate(-5%, -3%) scale(1.1);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(5%, 3%) scale(1);
+    opacity: 0.8;
+  }
+}
 
 .star {
   position: absolute;
@@ -51,7 +77,7 @@ html,body{
   display:flex;
   align-items:center;
   justify-content:center;
-  background:linear-gradient(180deg, rgba(15,23,36,0.9), rgba(7,16,37,0.9));
+  background:transparent;
   transition:opacity 1s ease;
   z-index:10;
 }
@@ -82,7 +108,7 @@ html,body{
   align-items:center;
   justify-content:center;
   flex-direction:column;
-  background:rgba(17,17,17,0.85);
+  background:transparent;
   color:#fff;
   opacity:0;
   transition:opacity 1s ease;
@@ -179,6 +205,7 @@ html,body{
 </head>
 <body>
   <div class="stars" id="stars"></div>
+<div class="aurora"></div>
 
   <!-- Első rész -->
   <div class="display-wrap" id="intro">
