--- a/video.html
+++ b/video.html
@@ -93,7 +93,7 @@
   <!-- YouTube videó beágyazás -->
   <iframe
     id="youtubeVideo"
-    src="https://www.youtube.com/embed/zSN7MOsPUog?autoplay=1&mute=1&controls=1&modestbranding=1&rel=0&enablejsapi=1"
+     src="https://www.youtube.com/embed/gHQHhmgZ7GA?autoplay=1&mute=0&controls=1&modestbranding=1&rel=0&enablejsapi=1"
     title="Beágyazott YouTube videó"
     allow="autoplay; encrypted-media"
     allowfullscreen
